# gui

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  gui.cpp  gui.hpp  gui.sln  gui.vcxproj  gui.vcxproj.filters  main.cpp
gui/: CMakeLists.txt  gui.cpp  gui.hpp  gui.vcxproj  gui.vcxproj.filters  main.cpp  text.cpp  text.hpp
gui/gui/: gui.vcxproj  gui.vcxproj.filters
include/: gui.hpp
src/: gui.cpp
